--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,47 @@
-name: Deploy React App to Hostinger
+name: Build, Deploy to Hostinger, and Update GitHub
 
 on:
   push:
     branches:
-      - main  # Change this to your main branch if it's different
+      - main
 
 jobs:
-  build-and-deploy:
+  build-deploy-and-update:
     runs-on: ubuntu-latest
 
+    env:
+      FTP_SERVER: ${{ secrets.FTP_SERVER }}
+      FTP_USER: ${{ secrets.FTP_USER }}
+      FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+      FTP_PORT: 21
+      LOCAL_DIR: "ijlalkhan"
+      REMOTE_DIR: "/public_html"
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'  # Specify your Node.js version
+    - name: Install dependencies and build
+      run: |
+        # Add commands here to install dependencies and build your project
+        # Example:
+        # npm install
+          npm run build
+        # Or any other commands you use to build your project
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install lftp
+      run: |
+        sudo apt-get update
+        sudo apt-get install lftp -y
 
-      - name: Build the project
-        run: npm run build
+    - name: Deploy build artifacts to Hostinger using lftp
+      run: |
+        lftp -e "set ssl:verify-certificate no; open -u $FTP_USER,$FTP_PASSWORD -p $FTP_PORT $FTP_SERVER; mirror --reverse --delete --verbose $LOCAL_DIR/build $REMOTE_DIR; bye"
 
-      - name: Deploy to Hostinger via FTP
-        uses: SamKirkland/FTP-Deploy-Action@4.2.0
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: build
-          server-dir: /public_html  # Change this if you have a different directory structure
+    - name: Update GitHub repository
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "actions@users.noreply.github.com"
+        git add .
+        git commit -m "Auto-deploys israrahmadr"
+        git push origin main
