--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         # Add commands here to install dependencies and build your project
         # Example:
         # npm install
-          npm run build
+        # npm run build
         # Or any other commands you use to build your project
 
     - name: Install lftp
