--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Upload Build to Hostingby israrahmad sssss
+name: Deploy to FTP1
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  upload-build:
+  deploy:
     runs-on: ubuntu-latest
 
     env:
@@ -14,18 +14,16 @@ jobs:
       FTP_USER: ${{ secrets.FTP_USER }}
       FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
       FTP_PORT: 21
-      LOCAL_DIR: "builds"
+      LOCAL_DIR: "builds"  # Adjust this to the correct path
       REMOTE_DIR: "/public_html"
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-      
-    - name: Install lftp
-      run: |
-        sudo apt-get update
-        sudo apt-get install lftp -y
 
-    - name: Upload build folder contents to Hostinger using lftp
+    - name: Install lftp
+      run: sudo apt-get install lftp -y
+      
+    - name: Deploy using lftp
       run: |
         lftp -e "set ssl:verify-certificate no; open -u $FTP_USER,$FTP_PASSWORD -p $FTP_PORT $FTP_SERVER; mirror --reverse --delete --verbose $LOCAL_DIR $REMOTE_DIR; bye"
