added ngiix docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
-version: '3.8'
+version: '3'
 services:
-  my-vite-app:
-    image: ijkalhk/my-vite-app:latest
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "80:80"  # Map container's port 80 to host's port 80
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
